[package]
name = "actix-extensible-rate-limit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
async-trait = "0.1.49"
dashmap = { version = "5.2.0", optional = true }
futures = "0.3.21"
log = "0.4.16"
once_cell = "1.10.0"

[features]
default = ["dashmap"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
