[package]
name = "actix-extensible-rate-limit"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rate limiting middleware for actix-web"
repository = "https://github.com/jacob-pro/actix-extensible-rate-limit"
homepage = "https://github.com/jacob-pro/actix-extensible-rate-limit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
async-trait = "0.1.49"
dashmap = { version = "5.2.0", optional = true }
futures = "0.3.21"
log = "0.4.16"
once_cell = "1.10.0"
redis = { version = "0.21.5", default-features = false, features = ["tokio-comp", "aio", "connection-manager"], optional = true }
thiserror = "1.0.30"

[features]
default = ["dashmap"]

[dev-dependencies]
tokio = { version = "1", features = ["time", "test-util"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
