[package]
name = "actix-extensible-rate-limit"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rate limiting middleware for actix-web"
repository = "https://github.com/jacob-pro/actix-extensible-rate-limit"
homepage = "https://github.com/jacob-pro/actix-extensible-rate-limit"

[dependencies]
actix-web = { version = "4", default-features = false, features = ["macros"] }
dashmap = { version = "6.0", optional = true }
futures = "0.3.28"
log = "0.4.19"
redis = { version = "0.26", default-features = false, features = [
  "tokio-comp",
  "aio",
  "connection-manager",
], optional = true }
thiserror = "1.0.40"

[features]
default = ["dashmap"]

[dev-dependencies]
tokio = { version = "1", features = ["time", "test-util"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
